--- a/ind.html
+++ b/ind.html
@@ -1,6 +1,10 @@
 <html>
-<head>
-</head>
-<body>
-</body>
+	<head>
+		<title>
+			My page on git
+		</title>
+	</head>
+	<body>
+		<p> Some simple text </p>
+	</body>
 </html>
